--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <input class="border3px"type="button" value="">
+    <input class="border3px"type="button" value="Hello!">
 </body>
 </html>
