--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <input class="border3px"type="button" value="Hello!">
+    <input class="borderleft3px"type="button" value="Hello!">
+    <input class="border3pxright"type="button" value="Hello!">
+    <input class="borderbottom3px"type="button" value="Hello!">
+    <input class="bordertop3px"type="button" value="Hello!">
 </body>
 </html>
