--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <input class="border3px"type="button" value="Hello!">
-    <input class="borderleft3px"type="button" value="Hello!">
-    <input class="border3pxright"type="button" value="Hello!">
-    <input class="borderbottom3px"type="button" value="Hello!">
-    <input class="bordertop3px"type="button" value="Hello!">
+    <input class="border1px"type="button" value="Hello!">
+    <input class="border-left1px"type="button" value="Hello!">
+    <input class="border-right3px"type="button" value="Hello!">
+    <input class="border-bottom3px"type="button" value="Hello!">
+    <input class="border-top3px"type="button" value="Hello!">
 </body>
 </html>
