Created Git Ignore

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input class="border1px"type="button" value="Hello!">
-    <input class="border-left1px"type="button" value="Hello!">
-    <input class="border-right3px"type="button" value="Hello!">
-    <input class="border-bottom3px"type="button" value="Hello!">
-    <input class="border-top3px"type="button" value="Hello!">
+  <div>
+    <i>Hello</i>
+  </div>
 </body>
 </html>
